   empty entity. Suggested by Sean Landis and Stian Soiland.
 - Added setters and getters for all the properties of all the classes in the API, including 
   the collection properties. Clarified the Javadocs for the default collection creations.
   This will greatly facilitate the usage of the API in IoC containers like Spring.
 - Renamed "URIResolver" property to "uriResolver" in TransformRepresentation.
 - Renamed "*Attribute" properties to "*Parameter" in TunnelService.
 - If Resource.getRepresentation(Variant) returns 'null', the Resource.handleGet() method now
   returns a NOT_FOUND (404) status. Suggested by John D. Mitchell. 
 - Added WADL extension with a WadlComponent capable of automatically wiring a Restlet component,
   application and resource classes. Suggested by Avi Flax. 
 - Added a createComponent() method on ServerServlet to facilitate the customization of the 
   component for a Servlet.
 - Updated the JaxbRepresentation#getObject so that JaxbException are not swallowed. Reported and contributed 
   by Sean Landis.
 - The Message's getEntityAsDom(), getEntityAsSax() and getEntityAsForm() are now caching the result
   representation for easier reuse in a Restlet filters chain. Suggested by Rob Heittman.
 - Finder.createResource() method now rethrows the Error exceptions thrown by Resource constructors.
   Suggested by Vincent Lari.
 - Added "accessRestricted" property to CookieSetting, currently mapped to the "httpOnly" Cookie attribute
   supported by recent browsers to prevent XSS attacks. Contributed by Rob Heittman.
     
[Misc]
 - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
 - Removed Jetty 5 connector from the code base. Jetty 6 connector is stable enough now.
 - Added Response.locationRef property as a replacement for the Response.redirectRef
   property that is now deprecated. Suggested by Michael Vogel and Avi Flax.
 - Updated projects to Eclipse 3.3. Minor adjustments required.
 