@@ -88,6 +88,7 @@ Changes log
    Suggested by Vincent Lari.
  - Added "accessRestricted" property to CookieSetting, currently mapped to the "httpOnly" Cookie attribute
    supported by recent browsers to prevent XSS attacks. Contributed by Rob Heittman.
+ - Added logger-less constructors to Template. Suggested by Justin Makeig.
      
 [Misc]
  - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
